Efficiency Test/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    STARTGAME

Grammar

Rule 0     S' -> programa
Rule 1     programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals mapping map block generate_end
Rule 2     programa -> PROGRAM generate_initial_goto ID D_2P block generate_end
Rule 3     generate_initial_goto -> <empty>
Rule 4     generate_end -> BIG_END
Rule 5     sprites -> SPRITESET D_2P sprite D_PYC more_sprites SMALL_END
Rule 6     more_sprites -> sprite D_PYC more_sprites
Rule 7     more_sprites -> <empty>
Rule 8     sprite -> ID EQUAL sprite_type sprite_attrs
Rule 9     sprite_type -> IMMOVABLE
Rule 10    sprite_type -> MOVINGAVATAR
Rule 11    sprite_type -> SHOOTINGAVATAR
Rule 12    sprite_type -> MISSILE
Rule 13    sprite_type -> SPAWNER
Rule 14    sprite_type -> PASSIVE
Rule 15    sprite_attrs -> sprite_attr more_sprite_attrs
Rule 16    sprite_attrs -> <empty>
Rule 17    more_sprite_attrs -> D_C sprite_attr more_sprite_attrs
Rule 18    more_sprite_attrs -> <empty>
Rule 19    sprite_attr -> IMG EQUAL STRING_CT
Rule 20    sprite_attr -> GENERATEDSPRITE EQUAL ID
Rule 21    sprite_attr -> SPEED EQUAL FLOAT_CT
Rule 22    sprite_attr -> PORTAL EQUAL BOOLEAN_CT
Rule 23    sprite_attr -> SHRINKFACTOR EQUAL FLOAT_CT
Rule 24    sprite_attr -> LIMIT EQUAL INT_CT
Rule 25    sprite_attr -> PROB EQUAL FLOAT_CT
Rule 26    sprite_attr -> COOLDOWN EQUAL INT_CT
Rule 27    sprite_attr -> COLOR EQUAL COLOR_CT
Rule 28    sprite_attr -> HEALTHPOINTS EQUAL INT_CT
Rule 29    sprite_attr -> LIMITHEALTHPOINTS EQUAL INT_CT
Rule 30    sprite_attr -> WEAPONSPRITE EQUAL ID
Rule 31    sprite_attr -> ORIENTATION EQUAL MOVEMENT_CT
Rule 32    interactions -> INTERACTIONLIST D_2P interaction D_PYC more_interactions SMALL_END
Rule 33    more_interactions -> interaction D_PYC more_interactions
Rule 34    more_interactions -> <empty>
Rule 35    interaction -> ID more_spritesid ENCOUNTERS ID EQUAL action more_actions
Rule 36    more_spritesid -> D_C ID more_spritesid
Rule 37    more_spritesid -> <empty>
Rule 38    more_actions -> D_C action more_actions
Rule 39    more_actions -> <empty>
Rule 40    action -> KILLSPRITE D_PA kill_id D_PC
Rule 41    action -> STEPBACK
Rule 42    action -> SCORECHANGE D_PA FLOAT_CT D_PC
Rule 43    action -> TRANSFORMTO D_PA ID D_PC
Rule 44    action -> BOUNCEFORWARD
Rule 45    action -> CHANGEHEALTHPOINTS D_PA INT_CT D_PC
Rule 46    action -> ADDTIMER TIME EQUAL INT_CT TRANSFORMALL D_PA ID D_C ID D_PC
Rule 47    action -> SHIELDFROM D_PA KILLSPRITE D_C ID D_PC
Rule 48    action -> PULLWITHIT
Rule 49    kill_id -> ID
Rule 50    kill_id -> <empty>
Rule 51    goals -> TERMINATIONGOALS D_2P goal D_PYC more_goals SMALL_END
Rule 52    more_goals -> goal D_PYC
Rule 53    more_goals -> <empty>
Rule 54    goal -> goal_type LIMIT EQUAL INT_CT WIN EQUAL BOOLEAN_CT
Rule 55    goal_type -> SPRITECOUNTER SPRITE EQUAL ID
Rule 56    goal_type -> MULTISPRITECOUNTER sprite_list
Rule 57    goal_type -> TIMEOUT
Rule 58    sprite_list -> SPRITE EQUAL ID more_sprite_list
Rule 59    more_sprite_list -> D_C sprite_list
Rule 60    more_sprite_list -> <empty>
Rule 61    mapping -> MAPPING D_2P mapping_rule D_PYC more_mapping_rules SMALL_END
Rule 62    more_mapping_rules -> mapping_rule D_PYC more_mapping_rules
Rule 63    more_mapping_rules -> <empty>
Rule 64    mapping_rule -> CHAR_CT EQUAL ID more_spritesid
Rule 65    map -> MAP D_2P STRING_CT D_PYC more_tiles SMALL_END
Rule 66    more_tiles -> STRING_CT D_PYC more_tiles
Rule 67    more_tiles -> <empty>
Rule 68    block -> vars save_vars_in_global_memory functions main_block
Rule 69    save_vars_in_global_memory -> <empty>
Rule 70    vars -> var D_PYC vars
Rule 71    vars -> <empty>
Rule 72    var -> VAR type D_2P ID
Rule 73    var -> VAR type D_CA INT_CT D_CC D_2P ID
Rule 74    type -> INT
Rule 75    type -> FLOAT
Rule 76    type -> STRING
Rule 77    type -> CHAR
Rule 78    type -> BOOLEAN
Rule 79    functions -> function functions
Rule 80    functions -> <empty>
Rule 81    save_function -> <empty>
Rule 82    function -> FUNC save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func
Rule 83    generate_end_func -> <empty>
Rule 84    save_function_id -> ID
Rule 85    parameters -> parameter more_parameters
Rule 86    parameters -> <empty>
Rule 87    parameter -> type D_2P type_parameter
Rule 88    type_parameter -> D_AMP ID
Rule 89    type_parameter -> ID
Rule 90    more_parameters -> D_C parameter more_parameters
Rule 91    more_parameters -> <empty>
Rule 92    main_block -> MAIN set_function_id_main D_2P code_block SMALL_END
Rule 93    set_function_id_main -> <empty>
Rule 94    code_block -> vars mini_block
Rule 95    statute -> assignation check_stack_equal
Rule 96    statute -> condition
Rule 97    statute -> printing
Rule 98    statute -> reading
Rule 99    statute -> cycle
Rule 100   statute -> function_use
Rule 101   statute -> return
Rule 102   check_stack_equal -> <empty>
Rule 103   function_use -> validate_function_id_do_era push_pa add_parameter more_ids pop_pc validate_params_generate_gosub
Rule 104   function_use -> validate_function_id_do_era D_PA D_PC validate_params_generate_gosub
Rule 105   validate_function_id_do_era -> ID
Rule 106   add_parameter -> expression
Rule 107   validate_params_generate_gosub -> <empty>
Rule 108   more_ids -> D_C add_parameter more_ids
Rule 109   more_ids -> <empty>
Rule 110   assignation -> received_id value_list push_equal expression
Rule 111   push_equal -> EQUAL
Rule 112   value_list -> check_dimension D_CA expression D_CC
Rule 113   value_list -> <empty>
Rule 114   check_dimension -> <empty>
Rule 115   printing -> PRINT D_PA printable D_PC
Rule 116   printable -> expression generate_print more_printable
Rule 117   generate_print -> <empty>
Rule 118   more_printable -> D_C printable
Rule 119   more_printable -> <empty>
Rule 120   condition -> IF D_PA expression D_PC generate_gotoF_if D_2P mini_block else_condition SMALL_END generate_end_if
Rule 121   generate_gotoF_if -> <empty>
Rule 122   generate_end_if -> <empty>
Rule 123   else_condition -> ELSE generate_goto_else D_2P mini_block
Rule 124   else_condition -> <empty>
Rule 125   generate_goto_else -> <empty>
Rule 126   reading -> GETVALUE D_PA received_id D_PC generate_read_value
Rule 127   reading -> GETLINE D_PA received_id D_PC generate_read_line
Rule 128   reading -> GETBOOLEAN D_PA received_id D_PC generate_read_boolean
Rule 129   reading -> GETCHAR D_PA received_id D_PC generate_read_char
Rule 130   generate_read_value -> <empty>
Rule 131   generate_read_line -> <empty>
Rule 132   generate_read_boolean -> <empty>
Rule 133   generate_read_char -> <empty>
Rule 134   cycle -> WHILE push_cont_in_stackJumps D_PA expression D_PC generate_gotoF_while D_2P mini_block SMALL_END generate_end_while
Rule 135   push_cont_in_stackJumps -> <empty>
Rule 136   generate_gotoF_while -> <empty>
Rule 137   generate_end_while -> <empty>
Rule 138   return -> RETURN expression
Rule 139   mini_block -> statute D_PYC mini_block
Rule 140   mini_block -> <empty>
Rule 141   expression -> big_exp or_exp check_stack_or
Rule 142   check_stack_or -> <empty>
Rule 143   or_exp -> OR expression
Rule 144   or_exp -> <empty>
Rule 145   big_exp -> medium_exp and_exp check_stack_and
Rule 146   check_stack_and -> <empty>
Rule 147   and_exp -> AND big_exp
Rule 148   and_exp -> <empty>
Rule 149   medium_exp -> exp relational_exp check_stack_mmdi
Rule 150   check_stack_mmdi -> <empty>
Rule 151   relational_exp -> MAYOR_QUE exp
Rule 152   relational_exp -> MENOR_QUE exp
Rule 153   relational_exp -> DIFERENTE_DE exp
Rule 154   relational_exp -> IGUAL_QUE exp
Rule 155   relational_exp -> <empty>
Rule 156   exp -> term check_stack_pm add_term
Rule 157   check_stack_pm -> <empty>
Rule 158   add_term -> push_pm exp
Rule 159   add_term -> <empty>
Rule 160   push_pm -> PLUS
Rule 161   push_pm -> MINUS
Rule 162   term -> factor check_stack_td times_factor
Rule 163   check_stack_td -> <empty>
Rule 164   times_factor -> push_td term
Rule 165   times_factor -> <empty>
Rule 166   push_td -> TIMES
Rule 167   push_td -> DIVISION
Rule 168   factor -> push_pa expression pop_pc
Rule 169   factor -> var_ct
Rule 170   push_pa -> D_PA
Rule 171   pop_pc -> D_PC
Rule 172   var_ct -> received_id value_list
Rule 173   var_ct -> received_float
Rule 174   var_ct -> received_int
Rule 175   var_ct -> received_boolean
Rule 176   var_ct -> received_string
Rule 177   var_ct -> received_char
Rule 178   var_ct -> function_use
Rule 179   received_id -> ID
Rule 180   received_float -> FLOAT_CT
Rule 181   received_int -> INT_CT
Rule 182   received_boolean -> BOOLEAN_CT
Rule 183   received_string -> STRING_CT
Rule 184   received_char -> CHAR_CT

Terminals, with rules where they appear

ADDTIMER             : 46
AND                  : 147
BIG_END              : 4
BOOLEAN              : 78
BOOLEAN_CT           : 22 54 182
BOUNCEFORWARD        : 44
CHANGEHEALTHPOINTS   : 45
CHAR                 : 77
CHAR_CT              : 64 184
COLOR                : 27
COLOR_CT             : 27
COOLDOWN             : 26
DIFERENTE_DE         : 153
DIVISION             : 167
D_2P                 : 1 2 5 32 51 61 65 72 73 82 87 92 120 123 134
D_AMP                : 88
D_C                  : 17 36 38 46 47 59 90 108 118
D_CA                 : 73 112
D_CC                 : 73 112
D_PA                 : 40 42 43 45 46 47 82 104 115 120 126 127 128 129 134 170
D_PC                 : 40 42 43 45 46 47 82 104 115 120 126 127 128 129 134 171
D_PYC                : 5 6 32 33 51 52 61 62 65 66 70 139
ELSE                 : 123
ENCOUNTERS           : 35
EQUAL                : 8 19 20 21 22 23 24 25 26 27 28 29 30 31 35 46 54 54 55 58 64 82 111
FLOAT                : 75
FLOAT_CT             : 21 23 25 42 180
FUNC                 : 82
GENERATEDSPRITE      : 20
GETBOOLEAN           : 128
GETCHAR              : 129
GETLINE              : 127
GETVALUE             : 126
HEALTHPOINTS         : 28
ID                   : 1 2 8 20 30 35 35 36 43 46 46 47 49 55 58 64 72 73 84 88 89 105 179
IF                   : 120
IGUAL_QUE            : 154
IMG                  : 19
IMMOVABLE            : 9
INT                  : 74
INTERACTIONLIST      : 32
INT_CT               : 24 26 28 29 45 46 54 73 181
KILLSPRITE           : 40 47
LIMIT                : 24 54
LIMITHEALTHPOINTS    : 29
MAIN                 : 92
MAP                  : 65
MAPPING              : 61
MAYOR_QUE            : 151
MENOR_QUE            : 152
MINUS                : 161
MISSILE              : 12
MOVEMENT_CT          : 31
MOVINGAVATAR         : 10
MULTISPRITECOUNTER   : 56
OR                   : 143
ORIENTATION          : 31
PASSIVE              : 14
PLUS                 : 160
PORTAL               : 22
PRINT                : 115
PROB                 : 25
PROGRAM              : 2
PULLWITHIT           : 48
RETURN               : 138
SCORECHANGE          : 42
SHIELDFROM           : 47
SHOOTINGAVATAR       : 11
SHRINKFACTOR         : 23
SIMPLEGAME           : 1
SMALL_END            : 5 32 51 61 65 82 92 120 134
SPAWNER              : 13
SPEED                : 21
SPRITE               : 55 58
SPRITECOUNTER        : 55
SPRITESET            : 5
STARTGAME            : 
STEPBACK             : 41
STRING               : 76
STRING_CT            : 19 65 66 183
TERMINATIONGOALS     : 51
TIME                 : 46
TIMEOUT              : 57
TIMES                : 166
TRANSFORMALL         : 46
TRANSFORMTO          : 43
VAR                  : 72 73
WEAPONSPRITE         : 30
WHILE                : 134
WIN                  : 54
error                : 

Nonterminals, with rules where they appear

action               : 35 38
add_parameter        : 103 108
add_term             : 156
and_exp              : 145
assignation          : 95
big_exp              : 141 147
block                : 1 2
check_dimension      : 112
check_stack_and      : 145
check_stack_equal    : 95
check_stack_mmdi     : 149
check_stack_or       : 141
check_stack_pm       : 156
check_stack_td       : 162
code_block           : 82 92
condition            : 96
cycle                : 99
else_condition       : 120
exp                  : 149 151 152 153 154 158
expression           : 106 110 112 116 120 134 138 143 168
factor               : 162
function             : 79
function_use         : 100 178
functions            : 68 79
generate_end         : 1 2
generate_end_func    : 82
generate_end_if      : 120
generate_end_while   : 134
generate_gotoF_if    : 120
generate_gotoF_while : 134
generate_goto_else   : 123
generate_initial_goto : 1 2
generate_print       : 116
generate_read_boolean : 128
generate_read_char   : 129
generate_read_line   : 127
generate_read_value  : 126
goal                 : 51 52
goal_type            : 54
goals                : 1
interaction          : 32 33
interactions         : 1
kill_id              : 40
main_block           : 68
map                  : 1
mapping              : 1
mapping_rule         : 61 62
medium_exp           : 145
mini_block           : 94 120 123 134 139
more_actions         : 35 38
more_goals           : 51
more_ids             : 103 108
more_interactions    : 32 33
more_mapping_rules   : 61 62
more_parameters      : 85 90
more_printable       : 116
more_sprite_attrs    : 15 17
more_sprite_list     : 58
more_sprites         : 5 6
more_spritesid       : 35 36 64
more_tiles           : 65 66
or_exp               : 141
parameter            : 85 90
parameters           : 82
pop_pc               : 103 168
printable            : 115 118
printing             : 97
programa             : 0
push_cont_in_stackJumps : 134
push_equal           : 110
push_pa              : 103 168
push_pm              : 158
push_td              : 164
reading              : 98
received_boolean     : 175
received_char        : 177
received_float       : 173
received_id          : 110 126 127 128 129 172
received_int         : 174
received_string      : 176
relational_exp       : 149
return               : 101
save_function        : 82
save_function_id     : 82
save_vars_in_global_memory : 68
set_function_id_main : 92
sprite               : 5 6
sprite_attr          : 15 17
sprite_attrs         : 8
sprite_list          : 56 59
sprite_type          : 8
sprites              : 1
statute              : 139
term                 : 156 164
times_factor         : 162
type                 : 72 73 82 87
type_parameter       : 87
validate_function_id_do_era : 103 104
validate_params_generate_gosub : 103 104
value_list           : 110 172
var                  : 70
var_ct               : 169
vars                 : 68 70 94

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals mapping map block generate_end
    (2) programa -> . PROGRAM generate_initial_goto ID D_2P block generate_end

    SIMPLEGAME      shift and go to state 1
    PROGRAM         shift and go to state 2

    programa                       shift and go to state 3

state 1

    (1) programa -> SIMPLEGAME . generate_initial_goto ID D_2P sprites interactions goals mapping map block generate_end
    (3) generate_initial_goto -> .

    ID              reduce using rule 3 (generate_initial_goto -> .)

    generate_initial_goto          shift and go to state 4

state 2

    (2) programa -> PROGRAM . generate_initial_goto ID D_2P block generate_end
    (3) generate_initial_goto -> .

    ID              reduce using rule 3 (generate_initial_goto -> .)

    generate_initial_goto          shift and go to state 5

state 3

    (0) S' -> programa .



state 4

    (1) programa -> SIMPLEGAME generate_initial_goto . ID D_2P sprites interactions goals mapping map block generate_end

    ID              shift and go to state 6


state 5

    (2) programa -> PROGRAM generate_initial_goto . ID D_2P block generate_end

    ID              shift and go to state 7


state 6

    (1) programa -> SIMPLEGAME generate_initial_goto ID . D_2P sprites interactions goals mapping map block generate_end

    D_2P            shift and go to state 8


state 7

    (2) programa -> PROGRAM generate_initial_goto ID . D_2P block generate_end

    D_2P            shift and go to state 9


state 8

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P . sprites interactions goals mapping map block generate_end
    (5) sprites -> . SPRITESET D_2P sprite D_PYC more_sprites SMALL_END

    SPRITESET       shift and go to state 10

    sprites                        shift and go to state 11

state 9

    (2) programa -> PROGRAM generate_initial_goto ID D_2P . block generate_end
    (68) block -> . vars save_vars_in_global_memory functions main_block
    (70) vars -> . var D_PYC vars
    (71) vars -> .
    (72) var -> . VAR type D_2P ID
    (73) var -> . VAR type D_CA INT_CT D_CC D_2P ID

    FUNC            reduce using rule 71 (vars -> .)
    MAIN            reduce using rule 71 (vars -> .)
    VAR             shift and go to state 14

    vars                           shift and go to state 12
    var                            shift and go to state 13
    block                          shift and go to state 15

state 10

    (5) sprites -> SPRITESET . D_2P sprite D_PYC more_sprites SMALL_END

    D_2P            shift and go to state 16


state 11

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites . interactions goals mapping map block generate_end
    (32) interactions -> . INTERACTIONLIST D_2P interaction D_PYC more_interactions SMALL_END

    INTERACTIONLIST shift and go to state 18

    interactions                   shift and go to state 17

state 12

    (68) block -> vars . save_vars_in_global_memory functions main_block
    (69) save_vars_in_global_memory -> .

    FUNC            reduce using rule 69 (save_vars_in_global_memory -> .)
    MAIN            reduce using rule 69 (save_vars_in_global_memory -> .)

    save_vars_in_global_memory     shift and go to state 19

state 13

    (70) vars -> var . D_PYC vars

    D_PYC           shift and go to state 20


state 14

    (72) var -> VAR . type D_2P ID
    (73) var -> VAR . type D_CA INT_CT D_CC D_2P ID
    (74) type -> . INT
    (75) type -> . FLOAT
    (76) type -> . STRING
    (77) type -> . CHAR
    (78) type -> . BOOLEAN

    INT             shift and go to state 23
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 24
    BOOLEAN         shift and go to state 25

    type                           shift and go to state 26

state 15

    (2) programa -> PROGRAM generate_initial_goto ID D_2P block . generate_end
    (4) generate_end -> . BIG_END

    BIG_END         shift and go to state 28

    generate_end                   shift and go to state 27

state 16

    (5) sprites -> SPRITESET D_2P . sprite D_PYC more_sprites SMALL_END
    (8) sprite -> . ID EQUAL sprite_type sprite_attrs

    ID              shift and go to state 30

    sprite                         shift and go to state 29

state 17

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions . goals mapping map block generate_end
    (51) goals -> . TERMINATIONGOALS D_2P goal D_PYC more_goals SMALL_END

    TERMINATIONGOALS shift and go to state 31

    goals                          shift and go to state 32

state 18

    (32) interactions -> INTERACTIONLIST . D_2P interaction D_PYC more_interactions SMALL_END

    D_2P            shift and go to state 33


state 19

    (68) block -> vars save_vars_in_global_memory . functions main_block
    (79) functions -> . function functions
    (80) functions -> .
    (82) function -> . FUNC save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func

    MAIN            reduce using rule 80 (functions -> .)
    FUNC            shift and go to state 36

    function                       shift and go to state 34
    functions                      shift and go to state 35

state 20

    (70) vars -> var D_PYC . vars
    (70) vars -> . var D_PYC vars
    (71) vars -> .
    (72) var -> . VAR type D_2P ID
    (73) var -> . VAR type D_CA INT_CT D_CC D_2P ID

    FUNC            reduce using rule 71 (vars -> .)
    MAIN            reduce using rule 71 (vars -> .)
    IF              reduce using rule 71 (vars -> .)
    PRINT           reduce using rule 71 (vars -> .)
    GETVALUE        reduce using rule 71 (vars -> .)
    GETLINE         reduce using rule 71 (vars -> .)
    GETBOOLEAN      reduce using rule 71 (vars -> .)
    GETCHAR         reduce using rule 71 (vars -> .)
    WHILE           reduce using rule 71 (vars -> .)
    RETURN          reduce using rule 71 (vars -> .)
    ID              reduce using rule 71 (vars -> .)
    SMALL_END       reduce using rule 71 (vars -> .)
    VAR             shift and go to state 14

    var                            shift and go to state 13
    vars                           shift and go to state 37

state 21

    (75) type -> FLOAT .

    D_2P            reduce using rule 75 (type -> FLOAT .)
    D_CA            reduce using rule 75 (type -> FLOAT .)


state 22

    (76) type -> STRING .

    D_2P            reduce using rule 76 (type -> STRING .)
    D_CA            reduce using rule 76 (type -> STRING .)


state 23

    (74) type -> INT .

    D_2P            reduce using rule 74 (type -> INT .)
    D_CA            reduce using rule 74 (type -> INT .)


state 24

    (77) type -> CHAR .

    D_2P            reduce using rule 77 (type -> CHAR .)
    D_CA            reduce using rule 77 (type -> CHAR .)


state 25

    (78) type -> BOOLEAN .

    D_2P            reduce using rule 78 (type -> BOOLEAN .)
    D_CA            reduce using rule 78 (type -> BOOLEAN .)


state 26

    (72) var -> VAR type . D_2P ID
    (73) var -> VAR type . D_CA INT_CT D_CC D_2P ID

    D_2P            shift and go to state 39
    D_CA            shift and go to state 38


state 27

    (2) programa -> PROGRAM generate_initial_goto ID D_2P block generate_end .

    $end            reduce using rule 2 (programa -> PROGRAM generate_initial_goto ID D_2P block generate_end .)


state 28

    (4) generate_end -> BIG_END .

    $end            reduce using rule 4 (generate_end -> BIG_END .)


state 29

    (5) sprites -> SPRITESET D_2P sprite . D_PYC more_sprites SMALL_END

    D_PYC           shift and go to state 40


state 30

    (8) sprite -> ID . EQUAL sprite_type sprite_attrs

    EQUAL           shift and go to state 41


state 31

    (51) goals -> TERMINATIONGOALS . D_2P goal D_PYC more_goals SMALL_END

    D_2P            shift and go to state 42


state 32

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals . mapping map block generate_end
    (61) mapping -> . MAPPING D_2P mapping_rule D_PYC more_mapping_rules SMALL_END

    MAPPING         shift and go to state 43

    mapping                        shift and go to state 44

state 33

    (32) interactions -> INTERACTIONLIST D_2P . interaction D_PYC more_interactions SMALL_END
    (35) interaction -> . ID more_spritesid ENCOUNTERS ID EQUAL action more_actions

    ID              shift and go to state 46

    interaction                    shift and go to state 45

state 34

    (79) functions -> function . functions
    (79) functions -> . function functions
    (80) functions -> .
    (82) function -> . FUNC save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func

    MAIN            reduce using rule 80 (functions -> .)
    FUNC            shift and go to state 36

    function                       shift and go to state 34
    functions                      shift and go to state 47

state 35

    (68) block -> vars save_vars_in_global_memory functions . main_block
    (92) main_block -> . MAIN set_function_id_main D_2P code_block SMALL_END

    MAIN            shift and go to state 49

    main_block                     shift and go to state 48

state 36

    (82) function -> FUNC . save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func
    (84) save_function_id -> . ID

    ID              shift and go to state 51

    save_function_id               shift and go to state 50

state 37

    (70) vars -> var D_PYC vars .

    FUNC            reduce using rule 70 (vars -> var D_PYC vars .)
    MAIN            reduce using rule 70 (vars -> var D_PYC vars .)
    IF              reduce using rule 70 (vars -> var D_PYC vars .)
    PRINT           reduce using rule 70 (vars -> var D_PYC vars .)
    GETVALUE        reduce using rule 70 (vars -> var D_PYC vars .)
    GETLINE         reduce using rule 70 (vars -> var D_PYC vars .)
    GETBOOLEAN      reduce using rule 70 (vars -> var D_PYC vars .)
    GETCHAR         reduce using rule 70 (vars -> var D_PYC vars .)
    WHILE           reduce using rule 70 (vars -> var D_PYC vars .)
    RETURN          reduce using rule 70 (vars -> var D_PYC vars .)
    ID              reduce using rule 70 (vars -> var D_PYC vars .)
    SMALL_END       reduce using rule 70 (vars -> var D_PYC vars .)


state 38

    (73) var -> VAR type D_CA . INT_CT D_CC D_2P ID

    INT_CT          shift and go to state 52


state 39

    (72) var -> VAR type D_2P . ID

    ID              shift and go to state 53


state 40

    (5) sprites -> SPRITESET D_2P sprite D_PYC . more_sprites SMALL_END
    (6) more_sprites -> . sprite D_PYC more_sprites
    (7) more_sprites -> .
    (8) sprite -> . ID EQUAL sprite_type sprite_attrs

    SMALL_END       reduce using rule 7 (more_sprites -> .)
    ID              shift and go to state 30

    more_sprites                   shift and go to state 55
    sprite                         shift and go to state 54

state 41

    (8) sprite -> ID EQUAL . sprite_type sprite_attrs
    (9) sprite_type -> . IMMOVABLE
    (10) sprite_type -> . MOVINGAVATAR
    (11) sprite_type -> . SHOOTINGAVATAR
    (12) sprite_type -> . MISSILE
    (13) sprite_type -> . SPAWNER
    (14) sprite_type -> . PASSIVE

    IMMOVABLE       shift and go to state 60
    MOVINGAVATAR    shift and go to state 56
    SHOOTINGAVATAR  shift and go to state 61
    MISSILE         shift and go to state 62
    SPAWNER         shift and go to state 57
    PASSIVE         shift and go to state 59

    sprite_type                    shift and go to state 58

state 42

    (51) goals -> TERMINATIONGOALS D_2P . goal D_PYC more_goals SMALL_END
    (54) goal -> . goal_type LIMIT EQUAL INT_CT WIN EQUAL BOOLEAN_CT
    (55) goal_type -> . SPRITECOUNTER SPRITE EQUAL ID
    (56) goal_type -> . MULTISPRITECOUNTER sprite_list
    (57) goal_type -> . TIMEOUT

    SPRITECOUNTER   shift and go to state 65
    MULTISPRITECOUNTER shift and go to state 63
    TIMEOUT         shift and go to state 66

    goal                           shift and go to state 64
    goal_type                      shift and go to state 67

state 43

    (61) mapping -> MAPPING . D_2P mapping_rule D_PYC more_mapping_rules SMALL_END

    D_2P            shift and go to state 68


state 44

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals mapping . map block generate_end
    (65) map -> . MAP D_2P STRING_CT D_PYC more_tiles SMALL_END

    MAP             shift and go to state 70

    map                            shift and go to state 69

state 45

    (32) interactions -> INTERACTIONLIST D_2P interaction . D_PYC more_interactions SMALL_END

    D_PYC           shift and go to state 71


state 46

    (35) interaction -> ID . more_spritesid ENCOUNTERS ID EQUAL action more_actions
    (36) more_spritesid -> . D_C ID more_spritesid
    (37) more_spritesid -> .

    D_C             shift and go to state 73
    ENCOUNTERS      reduce using rule 37 (more_spritesid -> .)

    more_spritesid                 shift and go to state 72

state 47

    (79) functions -> function functions .

    MAIN            reduce using rule 79 (functions -> function functions .)


state 48

    (68) block -> vars save_vars_in_global_memory functions main_block .

    BIG_END         reduce using rule 68 (block -> vars save_vars_in_global_memory functions main_block .)


state 49

    (92) main_block -> MAIN . set_function_id_main D_2P code_block SMALL_END
    (93) set_function_id_main -> .

    D_2P            reduce using rule 93 (set_function_id_main -> .)

    set_function_id_main           shift and go to state 74

state 50

    (82) function -> FUNC save_function_id . D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func

    D_PA            shift and go to state 75


state 51

    (84) save_function_id -> ID .

    D_PA            reduce using rule 84 (save_function_id -> ID .)


state 52

    (73) var -> VAR type D_CA INT_CT . D_CC D_2P ID

    D_CC            shift and go to state 76


state 53

    (72) var -> VAR type D_2P ID .

    D_PYC           reduce using rule 72 (var -> VAR type D_2P ID .)


state 54

    (6) more_sprites -> sprite . D_PYC more_sprites

    D_PYC           shift and go to state 77


state 55

    (5) sprites -> SPRITESET D_2P sprite D_PYC more_sprites . SMALL_END

    SMALL_END       shift and go to state 78


state 56

    (10) sprite_type -> MOVINGAVATAR .

    IMG             reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    GENERATEDSPRITE reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    SPEED           reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    PORTAL          reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    SHRINKFACTOR    reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    LIMIT           reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    PROB            reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    COOLDOWN        reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    COLOR           reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    HEALTHPOINTS    reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    LIMITHEALTHPOINTS reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    WEAPONSPRITE    reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    ORIENTATION     reduce using rule 10 (sprite_type -> MOVINGAVATAR .)
    D_PYC           reduce using rule 10 (sprite_type -> MOVINGAVATAR .)


state 57

    (13) sprite_type -> SPAWNER .

    IMG             reduce using rule 13 (sprite_type -> SPAWNER .)
    GENERATEDSPRITE reduce using rule 13 (sprite_type -> SPAWNER .)
    SPEED           reduce using rule 13 (sprite_type -> SPAWNER .)
    PORTAL          reduce using rule 13 (sprite_type -> SPAWNER .)
    SHRINKFACTOR    reduce using rule 13 (sprite_type -> SPAWNER .)
    LIMIT           reduce using rule 13 (sprite_type -> SPAWNER .)
    PROB            reduce using rule 13 (sprite_type -> SPAWNER .)
    COOLDOWN        reduce using rule 13 (sprite_type -> SPAWNER .)
    COLOR           reduce using rule 13 (sprite_type -> SPAWNER .)
    HEALTHPOINTS    reduce using rule 13 (sprite_type -> SPAWNER .)
    LIMITHEALTHPOINTS reduce using rule 13 (sprite_type -> SPAWNER .)
    WEAPONSPRITE    reduce using rule 13 (sprite_type -> SPAWNER .)
    ORIENTATION     reduce using rule 13 (sprite_type -> SPAWNER .)
    D_PYC           reduce using rule 13 (sprite_type -> SPAWNER .)


state 58

    (8) sprite -> ID EQUAL sprite_type . sprite_attrs
    (15) sprite_attrs -> . sprite_attr more_sprite_attrs
    (16) sprite_attrs -> .
    (19) sprite_attr -> . IMG EQUAL STRING_CT
    (20) sprite_attr -> . GENERATEDSPRITE EQUAL ID
    (21) sprite_attr -> . SPEED EQUAL FLOAT_CT
    (22) sprite_attr -> . PORTAL EQUAL BOOLEAN_CT
    (23) sprite_attr -> . SHRINKFACTOR EQUAL FLOAT_CT
    (24) sprite_attr -> . LIMIT EQUAL INT_CT
    (25) sprite_attr -> . PROB EQUAL FLOAT_CT
    (26) sprite_attr -> . COOLDOWN EQUAL INT_CT
    (27) sprite_attr -> . COLOR EQUAL COLOR_CT
    (28) sprite_attr -> . HEALTHPOINTS EQUAL INT_CT
    (29) sprite_attr -> . LIMITHEALTHPOINTS EQUAL INT_CT
    (30) sprite_attr -> . WEAPONSPRITE EQUAL ID
    (31) sprite_attr -> . ORIENTATION EQUAL MOVEMENT_CT
